[gd_scene load_steps=4 format=3 uid="uid://dx5x74ujak3kv"]

[ext_resource type="Script" path="res://entities/projectile/projectile.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dcwhtvvluy0dy" path="res://assets/art/filled_circle_small.png" id="2_ti7ol"]

[sub_resource type="CircleShape2D" id="1"]
resource_local_to_scene = true
radius = 8.0

[node name="Projectile" type="Area2D"]
z_index = 1
collision_layer = 4
collision_mask = 3
monitorable = false
script = ExtResource("1")

[node name="VisibilityNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(0.1, 0.1)

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_ti7ol")

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
